fix: background color contrast for blocks number, countdown and gallery grid (#433)
* fix: background color contrast fixed for blocks number, countdoen and gridBallery

* doc: release.md file updated

* fix: img focus hover

---------

--- a/src/theme/ItaliaTheme/Blocks/_countdown.scss
+++ b/src/theme/ItaliaTheme/Blocks/_countdown.scss
@@ -46,7 +46,7 @@
       position: absolute;
       width: 100%;
       height: 100%;
-      background-color: rgba(#000, 0.5);
+      background-color: rgba(#000, 0.65);
       content: '';
     }
   }
