--- a/src/theme/ItaliaTheme/Blocks/_numbers.scss
+++ b/src/theme/ItaliaTheme/Blocks/_numbers.scss
@@ -36,7 +36,7 @@
       position: absolute;
       width: 100%;
       height: 100%;
-      background-color: rgba(#000, 0.5);
+      background-color: rgba(#000, 0.65);
       content: '';
     }
   }
